FS-30: Fixed selected items not showing for multiselect

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -92,6 +92,11 @@ body {
 	color: white;
 }
 
+.dark-modal-content select[multiple] option:checked {
+	background-color: var(--bg-color);
+	color: white;
+}
+
 .modal-close-white {
 	filter: invert(1); /* Invert the color to make it white */
 }
